modify app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h2 class="app__title">Hello New Angular App!!!</h2>
+<h2 class="app__title">{{title}}</h2>
 <app-post></app-post>
 <app-post></app-post>
 <app-post></app-post>
