--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
 <h2 class="app__title">{{title}}</h2>
-<app-post></app-post>
-<app-post></app-post>
-<app-post></app-post>
-<div class="img-container">
-    <img width="200" [src]="img" alt="#">
-</div>
-<input type="text" placeholder="Please type ..." (keyup.enter)="handleInput($event)" (blur)="onBlur(myInput.value)" #myInput>
-<button (click)="handleClick()" [value]="inputValue">Click me!</button>
-<p><strong>{{inputValue}}</strong></p>
+<input type="text" [(ngModel)]="title">
