add dinamic posts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,6 @@
-<h2>Hello Angular!!</h2>
-
-<ul>
-  <li *ngFor="let item of array; let idx = index">
-    {{idx + 1}} = <strong>{{item}}</strong>
-  </li>
-</ul>
-
-<ul>
-  <li *ngFor="let post of objects">
-    <p>{{post.title}} - <b>{{post.author}}</b></p>
-    <ul>
-      <li *ngFor="let comment of post.content">
-        <h3>{{comment.title}}</h3>
-        <p>{{comment.text}}</p>
-      </li>
-    </ul>
-  </li>
-</ul>
-
-
+<div class="container">
+  <h1>Angular Component</h1>
+  <app-post-form></app-post-form>
+  <hr>
+  <app-post *ngFor="let p of posts" [post]="p"></app-post>
+</div>
