--- a/src/app/components/post-form/post-form.component.html
+++ b/src/app/components/post-form/post-form.component.html
@@ -1,5 +1,5 @@
 <div>
-  <input type="text" class="form-control" placeholder="Title...">
-  <input type="text" class="form-control" placeholder="Text...">
-  <button>Добавить текст</button>
+  <input type="text" class="form-control" placeholder="Title..." [(ngModel)]="title">
+  <input type="text" class="form-control" placeholder="Text..." [(ngModel)]="text">
+  <button (click)="addPost()">Добавить текст</button>
 </div>
