--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,10 @@
   <h1>Angular Component</h1>
   <app-post-form (onAdd)="updatePosts($event)"></app-post-form>
   <hr>
-  <app-post *ngFor="let p of posts" [post]="p"></app-post>
+  <app-post *ngFor="let p of posts" [post]="p" >
+    <small *ngIf="p.text.length > 10; else short">Пост Длинный</small>
+    <ng-template #short>
+      <small>Пост Короткий</small>
+    </ng-template>
+  </app-post>
 </div>
