--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,11 @@
   <app-post-form (onAdd)="updatePosts($event)"></app-post-form>
   <hr>
   <app-post *ngFor="let p of posts" [post]="p" >
-    <small *ngIf="p.text.length > 10; else short">Пост Длинный</small>
-    <ng-template #short>
-      <small>Пост Короткий</small>
-    </ng-template>
+    <div #info>
+      <small *ngIf="p.text.length > 10; else short">Пост Длинный</small>
+      <ng-template #short>
+        <small>Пост Короткий</small>
+      </ng-template>
+    </div>
   </app-post>
 </div>
