--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>Angular Component</h1>
   <app-post-form (onAdd)="updatePosts($event)"></app-post-form>
   <hr>
-  <app-post *ngFor="let p of posts" [post]="p" >
+  <app-post *ngFor="let p of posts" [post]="p" (onRemove)="removePost($event)">
     <div #info>
       <small *ngIf="p.text.length > 10; else short">Пост Длинный</small>
       <ng-template #short>
