--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Angular Component</h1>
-  <h2>Subtitle</h2>
+  <h2 [appStyle]="'red'" [dStyles]="{border: '1px solid blue', fontWeight: 'normal', borderRadius: '5px'}">Subtitle</h2>
   <app-post-form (onAdd)="updatePosts($event)"></app-post-form>
   <hr>
   <app-post *ngFor="let p of posts" [post]="p" (onRemove)="removePost($event)">
