--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,6 @@
 <div class="container">
-  <h1>Angular Component</h1>
-  <h2 [appStyle]="'red'" [dStyles]="{border: '1px solid blue', fontWeight: 'normal', borderRadius: '5px'}">Subtitle</h2>
-  <app-post-form (onAdd)="updatePosts($event)"></app-post-form>
-  <hr>
-  <app-post *ngFor="let p of posts" [post]="p" (onRemove)="removePost($event)">
-    <div #info>
-      <small *ngIf="p.text.length > 10; else short">Пост Длинный</small>
-      <ng-template #short>
-        <small>Пост Короткий</small>
-      </ng-template>
-    </div>
-  </app-post>
+  <h1>Angular Pipes</h1>
+  <p>{{ e | number: "1.1-5"}}</p>
+  <p>{{ e | number: "3.1"}}</p>
+  <p>{{ e | number: "1.0-0"}}</p>
 </div>
