--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <h1>Angular Pipes</h1>
   <p>{{ e | number: "1.1-5"}}</p>
-  <p>{{ e | number: "3.1"}}</p>
-  <p>{{ e | number: "1.0-0"}}</p>
+  <p>{{str | uppercase | lowercase | titlecase}}</p>
+  <p>{{str | titlecase | slice: 0:5}}</p>
+  <p>{{str | titlecase | slice: 5}}</p>
+  <p>{{str | titlecase | slice: 0:1}}</p>
+  <p>{{str | titlecase | slice: -1}}</p>
 </div>
