--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,10 @@
   <p>{{str | titlecase | slice: 5}}</p>
   <p>{{str | titlecase | slice: 0:1}}</p>
   <p>{{str | titlecase | slice: -1}}</p>
+
+  <div>{{ 10 | multi}}</div>
+  <div>{{ 10 | multi: 4}}</div>
+  <div>{{ 10 | multi: 13}}</div>
+
+  <p>{{"hello world       " | titlecase | exMark}}</p>
 </div>
