--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,20 @@
     <div class="form-control">
       <label>Email</label>
       <input type="text" placeholder="Email" formControlName="email">
-      <div class="validation"></div>
+      <div class="validation" *ngIf="form.get('email').invalid && form.get('email').touched">
+        <small *ngIf="form.get('email').errors['required']">Поле не должно быть пустым</small>
+        <small *ngIf="form.get('email').errors['email']">Ваш email не корректный</small>
+      </div>
     </div>
 
     <div class="form-control">
       <label>Пароль</label>
       <input type="password" placeholder="Пароль" formControlName="pass">
-      <div class="validation"></div>
+      <div class="validation" *ngIf="form.get('pass').invalid && form.get('pass').touched">
+        <small *ngIf="form.get('pass').errors['required']">Поле не должно быть пустым</small>
+        <small *ngIf="form.get('pass').errors['minlength']">Поле должно содержать минимум {{form.get('pass').errors['minlength'].requiredLength}}.
+        Сейчас введено {{form.get('pass').errors['minlength'].actualLength}} символов</small>
+      </div>
     </div>
 
     <div class="card">
