--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
 p {
   font-size: 1.5rem;
 }
+
+input{
+  &.ng-invalid.ng-touched{
+    border: 1px solid orangered;
+  }
+  &.ng-valid.ng-touched{
+    border: 1px solid forestgreen;
+  }
+}
