--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,7 @@
 <div class="container">
-  <form class="card" [formGroup]="form" (ngSubmit)="submit()">
-    <h1>Angular Forms</h1>
-    <div class="form-control">
-      <label>Email</label>
-      <input type="text" placeholder="Email" formControlName="email">
-      <div class="validation" *ngIf="form.get('email').invalid && form.get('email').touched">
-        <small *ngIf="form.get('email').errors['required']">Поле не должно быть пустым</small>
-        <small *ngIf="form.get('email').errors['email']">Ваш email не корректный</small>
-        <small *ngIf="form.get('email').errors['restrictedEmails']">Email {{form.get('email').value}} запрешен!!</small>
-        <small *ngIf="form.get('email').errors['uniqEmail']">Email {{form.get('email').value}} занят!!</small>
-      </div>
-    </div>
-
-    <div class="form-control">
-      <label>Пароль</label>
-      <input type="password" placeholder="Пароль" formControlName="pass">
-      <div class="validation" *ngIf="form.get('pass').invalid && form.get('pass').touched">
-        <small *ngIf="form.get('pass').errors['required']">Поле не должно быть пустым</small>
-        <small *ngIf="form.get('pass').errors['minlength']">Поле должно содержать минимум {{form.get('pass').errors['minlength'].requiredLength}}.
-        Сейчас введено {{form.get('pass').errors['minlength'].actualLength}} символов</small>
-      </div>
-    </div>
-
-    <div class="card" formGroupName="address">
-      <h2>Адрес</h2>
-
-      <div class="form-control">
-        <label>Страна</label>
-
-        <select formControlName="country">
-          <option value="ru">Россия</option>
-          <option value="ua">Украина</option>
-          <option value="by">Беларусь</option>
-        </select>
-      </div>
-
-      <div class="form-control">
-        <input type="text" formControlName="city" placeholder="Введите ваш город">
-      </div>
-
-      <button class="btn" type="button" (click)="setCapital()">Выбрать столицу</button>
-    </div>
-
-    <div class="card" formGroupName="skills">
-      <h2>Ваши навыки</h2>
-      <button class="btn" type="button" (click)="addSkill()">Добавить умение</button>
-      <div class="form-control" *ngFor="let control of getControls(), let idx = index">
-        <label>Умение {{idx}}</label>
-        <input type="text" [formControlName]="idx">
-      </div>
-    </div>
-
-    <button class="btn" type="submit" [disabled]="form.invalid">Отправить</button>
-
-  </form>
+    <h1>Angular NgModels</h1>
+    <app-switch [(ngModel)]="appState" (ngModelChange)="handleChange()"></app-switch>
+  <p>{{appState}}</p>
 </div>
 
 
